# word-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/word_mcp/: __init__.py  com_manager.py  com_pool.py  document_manager.py  errors.py  logging_config.py  monitoring.py  server.py
src/word_mcp/tools/: __init__.py  comments.py  document.py  formatting.py  headers_footers.py  images.py  images_com.py  monitoring.py  search.py  sections.py  styles.py  tables.py  tables_com.py  text.py  tracked_changes.py  tracked_editing.py
